Fixed colour and layout issues.

--- a/src/components/Card/styles.module.scss
+++ b/src/components/Card/styles.module.scss
@@ -100,6 +100,7 @@
       font-weight: 100;
       line-height: 12px;
       margin-bottom: 0;
+      color: $color-white;
 
       @media screen and (min-width: 768px) {
         font-size: 12px;
