--- a/src/components/CardList/styles.module.scss
+++ b/src/components/CardList/styles.module.scss
@@ -9,7 +9,7 @@
   padding: 10px;
 
   @media screen and (min-width: 1000px) {
-    margin-top: 40px;
+    margin-top: 10px;
   }
 }
 
@@ -19,5 +19,15 @@
   font-size: 20px;
   font-weight: 500;
   text-align: center;
-  padding-top: 10px;
+  //padding-top: 10px;
+  padding-bottom: 10px;
+
+  @media screen and (min-width: 768px) {
+    padding-top: 10px;
+  }
+
+  @media screen and (min-width: 768px) {
+    padding-top: 20px;
+    padding-top: 20px;
+  }
 }
