--- a/src/components/Timer/styles.module.scss
+++ b/src/components/Timer/styles.module.scss
@@ -4,6 +4,7 @@
   font-family: proxima-nova, sans-serif, Arial, Helvetica;
   font-size: 20px;
   background-color: $brand-tertiary-color;
+  color: $brand-secondary-color;
   height: fit-content;
   width: fit-content;
   padding: 5px 10px;
