--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -4,5 +4,4 @@ $brand-tertiary-color: #a0d4cd;
 
 $color-white: #ffffff;
 $color-dark-blue: #00223e;
-$color-mid-gray: #486681
-#30a2c5
+$color-mid-gray: #486681;
